[package]
name = "xagg"
version = "0.1.0"
authors = ["Franz Amador <franzamador@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.2"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
